--- a/QuizMasterV2/app/src/main/AndroidManifest.xml
+++ b/QuizMasterV2/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
     <!-- Permiso para acceder a Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permiso para leer del almacenamiento externo -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Permiso para escribir en el almacenamiento externo -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,6 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Nueva actividad para mostrar el resultado -->
+        <activity
+            android:name=".ResultadoActivity"
+            android:label="Resultado"
+            android:theme="@style/Theme.LaMevaPrimeraAplicació"/>
     </application>
 
 </manifest>
