--- a/QuizMasterV2/app/src/main/AndroidManifest.xml
+++ b/QuizMasterV2/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <!-- Permiso para escribir en el almacenamiento externo -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
+        android:name=".PersonApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -41,6 +42,8 @@
             android:name=".ResultadoActivity"
             android:label="Resultado"
             android:theme="@style/Theme.LaMevaPrimeraAplicació"/>
+
     </application>
+
 
 </manifest>
